; ModuleID = '/home/carl/AnghaBench/reactos/dll/win32/mpr/extr_wnet.c_use_connection_set_accessnameW.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/win32/mpr/extr_wnet.c_use_connection_set_accessnameW.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.use_connection_context = type { %struct.TYPE_2__*, i32*, i32* }
%struct.TYPE_2__ = type { i32* }

@CONNECT_LOCALDRIVE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.use_connection_context*, i32*)* @use_connection_set_accessnameW to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @use_connection_set_accessnameW(%struct.use_connection_context* %0, i32* %1) #0 {
  %3 = alloca %struct.use_connection_context*, align 8
  %4 = alloca i32*, align 8
  %5 = alloca i32*, align 8
  store %struct.use_connection_context* %0, %struct.use_connection_context** %3, align 8
  store i32* %1, i32** %4, align 8
  %6 = load %struct.use_connection_context*, %struct.use_connection_context** %3, align 8
  %7 = getelementptr inbounds %struct.use_connection_context, %struct.use_connection_context* %6, i32 0, i32 2
  %8 = load i32*, i32** %7, align 8
  store i32* %8, i32** %5, align 8
  %9 = load i32*, i32** %4, align 8
  %10 = icmp ne i32* %9, null
  br i1 %10, label %11, label %25

11:                                               ; preds = %2
  %12 = load i32*, i32** %5, align 8
  %13 = load i32*, i32** %4, align 8
  %14 = call i32 @lstrcpyW(i32* %12, i32* %13)
  %15 = load %struct.use_connection_context*, %struct.use_connection_context** %3, align 8
  %16 = getelementptr inbounds %struct.use_connection_context, %struct.use_connection_context* %15, i32 0, i32 1
  %17 = load i32*, i32** %16, align 8
  %18 = icmp ne i32* %17, null
  br i1 %18, label %19, label %24

19:                                               ; preds = %11
  %20 = load i32, i32* @CONNECT_LOCALDRIVE, align 4
  %21 = load %struct.use_connection_context*, %struct.use_connection_context** %3, align 8
  %22 = getelementptr inbounds %struct.use_connection_context, %struct.use_connection_context* %21, i32 0, i32 1
  %23 = load i32*, i32** %22, align 8
  store i32 %20, i32* %23, align 4
  br label %24

24:                                               ; preds = %19, %11
  br label %33

25:                                               ; preds = %2
  %26 = load i32*, i32** %5, align 8
  %27 = load %struct.use_connection_context*, %struct.use_connection_context** %3, align 8
  %28 = getelementptr inbounds %struct.use_connection_context, %struct.use_connection_context* %27, i32 0, i32 0
  %29 = load %struct.TYPE_2__*, %struct.TYPE_2__** %28, align 8
  %30 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %29, i32 0, i32 0
  %31 = load i32*, i32** %30, align 8
  %32 = call i32 @lstrcpyW(i32* %26, i32* %31)
  br label %33

33:                                               ; preds = %25, %24
  ret void
}

declare dso_local i32 @lstrcpyW(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
